--- a/HabitManager/HabitManager/GoogleService-Info.plist
+++ b/HabitManager/HabitManager/GoogleService-Info.plist
@@ -9,21 +9,21 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>HabitManager</string>
+	<string>com.example.HabitManager</string>
 	<key>PROJECT_ID</key>
 	<string>habitmanager-c5aeb</string>
 	<key>STORAGE_BUCKET</key>
 	<string>habitmanager-c5aeb.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
-	<false></false>
+	<false/>
 	<key>IS_ANALYTICS_ENABLED</key>
-	<false></false>
+	<false/>
 	<key>IS_APPINVITE_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>IS_GCM_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>IS_SIGNIN_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>GOOGLE_APP_ID</key>
 	<string>1:930285007094:ios:b343b19d3938e165c87cd7</string>
 </dict>
